--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <!-- Compiled and minified JavaScript -->
 <script src="classes/book.js"></script>
-
+<script src="classes/UI.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
