Added getBook functional by UI and LS

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
             <h4>Add Book</h4>
             <form class="col-5">
                 <div class="mb-4">
-                    <label for="titleInput" class="form-label">Title</label>
-                    <input type="text" class="form-control" id="titleInput">
+                    <label for="title" class="form-label">Title</label>
+                    <input type="text" class="form-control" id="title">
                 </div>
 
                 <div class="mb-4">
-                    <label for="authorInput" class="form-label">Author</label>
-                    <input type="text" class="form-control" id="authorInput">
+                    <label for="author" class="form-label">Author</label>
+                    <input type="text" class="form-control" id="author">
                 </div>
 
                 <div class="mb-4">
-                    <label for="isbnInput" class="form-label">ISBN#</label>
-                    <input type="text" class="form-control" id="isbnInput">
+                    <label for="isbn" class="form-label">ISBN#</label>
+                    <input type="text" class="form-control" id="isbn">
                     <input class= "btn btn-outline-primary col-7 m-5" type="submit" value="Submit">
                 </div>
             </form>
@@ -68,6 +68,7 @@
 <!-- Compiled and minified JavaScript -->
 <script src="classes/book.js"></script>
 <script src="classes/UI.js"></script>
+<script src="classes/LS.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
