--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 </div>
             </form>
         </div>
+              <label for="filter" class="form-label"></label>
+              <input type="text" id="filter" class="form-label col-2 mb-4" placeholder="Search book">
     </div>
 </div>
 
